fix some flipping issues on safari

--- a/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
@@ -206,7 +206,7 @@
   position: relative;
   margin: 0px auto;
   z-index: 1;
-  perspective: 1000;
+  .perspective(1000);
 }
 #f1_container {
   width: 119px;
@@ -217,13 +217,15 @@
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
-  transition: all 1.0s linear;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  .transition(all 1.0s linear);
 }
 .flip_container:hover .flip_card {
-	  transform: rotateX(180deg);
+	.rotateX(180deg);
 }
 .flip_container.vert:hover .flip_card {
-	  transform: rotateY(180deg);
+	.rotateY(180deg);
 }
 	
 .face {
@@ -231,10 +233,13 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  overflow:visible;
 }
 .face.back {
   display: block;
-  transform: rotateX(180deg);
+  .rotateX(180deg);
   box-sizing: border-box;
   text-align: center;
   
@@ -244,10 +249,10 @@
   
 }
 .flip_container.vert:hover .flip_card {
-	  transform: rotateY(180deg);
+	.rotateY(180deg);
 }
 .vert .face.back {
-	transform: rotateY(180deg);
+	.rotateY(180deg);
 }
 
 /**************
@@ -287,27 +292,17 @@ a.sb.gray:hover, .sb.gray a, a.sb.gray:after, .sb.gray a:after {
 
 .isotope,
 .isotope .isotope-item {
-  -webkit-transition-duration: 0.8s;
-     -moz-transition-duration: 0.8s;
-      -ms-transition-duration: 0.8s;
-       -o-transition-duration: 0.8s;
-          transition-duration: 0.8s;
+	.transition-duration(0.8s);
 }
 
 .isotope {
-  -webkit-transition-property: height, width;
-     -moz-transition-property: height, width;
-      -ms-transition-property: height, width;
-       -o-transition-property: height, width;
+	-webkit-transition-property: height, width;
           transition-property: height, width;
 }
 
 .isotope .isotope-item {
-  -webkit-transition-property: -webkit-transform, opacity;
-     -moz-transition-property:    -moz-transform, opacity;
-      -ms-transition-property:     -ms-transform, opacity;
-       -o-transition-property:      -o-transform, opacity;
-          transition-property:         transform, opacity;
+	-webkit-transition-property: transform, opacity;
+          transition-property: transform, opacity;
 }
 
 /**** disabling Isotope CSS3 transitions ****/
@@ -315,11 +310,7 @@ a.sb.gray:hover, .sb.gray a, a.sb.gray:after, .sb.gray a:after {
 .isotope.no-transition,
 .isotope.no-transition .isotope-item,
 .isotope .isotope-item.no-transition {
-  -webkit-transition-duration: 0s;
-     -moz-transition-duration: 0s;
-      -ms-transition-duration: 0s;
-       -o-transition-duration: 0s;
-          transition-duration: 0s;
+	.transition-duration(0s);
 }
 
 /* End: Recommended Isotope styles */
@@ -328,11 +319,7 @@ a.sb.gray:hover, .sb.gray a, a.sb.gray:after, .sb.gray a:after {
 
 /* disable CSS transitions for containers with infinite scrolling*/
 .isotope.infinite-scrolling {
-  -webkit-transition: none;
-     -moz-transition: none;
-      -ms-transition: none;
-       -o-transition: none;
-          transition: none;
+	.transition(none);
 }
 
 #container {
@@ -341,7 +328,7 @@ a.sb.gray:hover, .sb.gray a, a.sb.gray:after, .sb.gray a:after {
     margin: 15px;
     padding:0px;
     width: 300px;
-    overflow: hidden;
+    overflow: visible;
     margin-bottom: 20px;
 	text-align: center;
 	padding-right: 5px;
@@ -358,7 +345,7 @@ a.sb.gray:hover, .sb.gray a, a.sb.gray:after, .sb.gray a:after {
 		background: none repeat scroll 0 0 #FFF;
     	border: 1px solid @black;
 		border-radius: 0px 0px 0px 0px;
-		box-shadow: 4px 4px 1px rgba(0, 0, 0, 0.85);
+		.box-shadow(4px 4px 1px rgba(0, 0, 0, 0.85));
 		width: 100%;
 		height: 100%;
 	}
@@ -472,7 +459,7 @@ ul.work-artists {
 }
 
 
-@media(max-width: @screen-sm-min) { 
+@media(max-width: @screen-sm-max) { 
 	#container {
 .item {
     float: left;
@@ -515,52 +502,8 @@ ul.work-artists {
 * Logo Flip
 **************/
 
-.flip_container {
-  position: relative;
-  margin: 0px auto;
-  z-index: 1;
-  perspective: 1000;
-}
-#f1_container {
-  width: 119px;
-  height: 150px;
-}
-
-.flip_card {
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-  transition: all 1.0s linear;
-}
-.flip_container:hover .flip_card {
-	  transform: rotateX(180deg);
-}
-.flip_container.vert:hover .flip_card {
-	  transform: rotateY(180deg);
-}
-	
-.face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
 .face.back {
-  display: none;
-  transform: rotateX(180deg);
-  box-sizing: border-box;
-  text-align: center;
-  
-  p {
-  	text-align: left;
-  }
-  
-}
-.flip_container.vert:hover .flip_card {
-	  transform: rotateY(180deg);
-}
-.vert .face.back {
-	transform: rotateY(180deg);
+  display: none;  
 }
 	
 	
