--- a/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
@@ -5640,6 +5640,8 @@ button.close {
   position: relative;
   margin: 0px auto;
   z-index: 1;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
   perspective: 1000;
 }
 #f1_container {
@@ -5650,12 +5652,19 @@ button.close {
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
-  transition: all 1.0s linear;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -webkit-transition: all 1s linear;
+  transition: all 1s linear;
 }
 .flip_container:hover .flip_card {
+  -webkit-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
   transform: rotateX(180deg);
 }
 .flip_container.vert:hover .flip_card {
+  -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
 .face {
@@ -5663,9 +5672,14 @@ button.close {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  overflow: visible;
 }
 .face.back {
   display: block;
+  -webkit-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
   transform: rotateX(180deg);
   box-sizing: border-box;
   text-align: center;
@@ -5674,9 +5688,13 @@ button.close {
   text-align: left;
 }
 .flip_container.vert:hover .flip_card {
+  -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
 .vert .face.back {
+  -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
 /**************
@@ -5715,23 +5733,14 @@ a.sb.gray:after,
 .isotope,
 .isotope .isotope-item {
   -webkit-transition-duration: 0.8s;
-  -moz-transition-duration: 0.8s;
-  -ms-transition-duration: 0.8s;
-  -o-transition-duration: 0.8s;
   transition-duration: 0.8s;
 }
 .isotope {
   -webkit-transition-property: height, width;
-  -moz-transition-property: height, width;
-  -ms-transition-property: height, width;
-  -o-transition-property: height, width;
   transition-property: height, width;
 }
 .isotope .isotope-item {
-  -webkit-transition-property: -webkit-transform, opacity;
-  -moz-transition-property: -moz-transform, opacity;
-  -ms-transition-property: -ms-transform, opacity;
-  -o-transition-property: -o-transform, opacity;
+  -webkit-transition-property: transform, opacity;
   transition-property: transform, opacity;
 }
 /**** disabling Isotope CSS3 transitions ****/
@@ -5739,18 +5748,12 @@ a.sb.gray:after,
 .isotope.no-transition .isotope-item,
 .isotope .isotope-item.no-transition {
   -webkit-transition-duration: 0s;
-  -moz-transition-duration: 0s;
-  -ms-transition-duration: 0s;
-  -o-transition-duration: 0s;
   transition-duration: 0s;
 }
 /* End: Recommended Isotope styles */
 /* disable CSS transitions for containers with infinite scrolling*/
 .isotope.infinite-scrolling {
   -webkit-transition: none;
-  -moz-transition: none;
-  -ms-transition: none;
-  -o-transition: none;
   transition: none;
 }
 #container .item {
@@ -5758,7 +5761,7 @@ a.sb.gray:after,
   margin: 15px;
   padding: 0px;
   width: 300px;
-  overflow: hidden;
+  overflow: visible;
   margin-bottom: 20px;
   text-align: center;
   padding-right: 5px;
@@ -5777,6 +5780,7 @@ a.sb.gray:after,
   background: none repeat scroll 0 0 #FFF;
   border: 1px solid #000000;
   border-radius: 0px 0px 0px 0px;
+  -webkit-box-shadow: 4px 4px 1px rgba(0, 0, 0, 0.85);
   box-shadow: 4px 4px 1px rgba(0, 0, 0, 0.85);
   width: 100%;
   height: 100%;
@@ -5870,7 +5874,7 @@ ul.work-artists li a {
   margin: 2px;
   text-transform: uppercase;
 }
-@media (max-width: 768px) {
+@media (max-width: 991px) {
   #container .item {
     float: left;
     margin: 15px;
@@ -5908,47 +5912,7 @@ ul.work-artists li a {
   /**************
 * Logo Flip
 **************/
-  .flip_container {
-    position: relative;
-    margin: 0px auto;
-    z-index: 1;
-    perspective: 1000;
-  }
-  #f1_container {
-    width: 119px;
-    height: 150px;
-  }
-  .flip_card {
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: all 1.0s linear;
-  }
-  .flip_container:hover .flip_card {
-    transform: rotateX(180deg);
-  }
-  .flip_container.vert:hover .flip_card {
-    transform: rotateY(180deg);
-  }
-  .face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
   .face.back {
     display: none;
-    transform: rotateX(180deg);
-    box-sizing: border-box;
-    text-align: center;
-  }
-  .face.back p {
-    text-align: left;
-  }
-  .flip_container.vert:hover .flip_card {
-    transform: rotateY(180deg);
-  }
-  .vert .face.back {
-    transform: rotateY(180deg);
   }
 }
